fix: alignment in buttons

--- a/TelerikMvcWebMail/Content/common.scss
+++ b/TelerikMvcWebMail/Content/common.scss
@@ -124,13 +124,15 @@ body > div:last-child {
         line-height: 32px;
         font-weight: normal;
         float: left;
+        display: flex;
+        align-items: center;
 
         &:before {
             content: "\e809";
             font-family: WebComponentsIcons;
-            font-size: 1.3em;
+            font-size: 32px;
             line-height: 1;
-            margin-top: -4px;
+            margin-right: 4px;
             vertical-align: middle;
             display: inline-block;
         }
